# ollama-code-review

./: .cta.json  README.md  SECURITY.md  biome.json  docker-compose.yml  package.json  schema.prisma  server.ts  tsconfig.json  vite.config.ts
.husky/: pre-commit
src/: App.tsx  index.html  index.tsx  routeTree.gen.ts  router.tsx  server.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  db.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: code_standards.rs  mod.rs  review_history.rs  user_config.rs
src/api/: database.api.ts  github.api.ts  http-client.ts  ollama.api.ts
src/components/: Header.tsx
src/components/Sidebar/: Sidebar.tsx
src/hooks/use-is-mounted/: useIsMounted.ts
src/integrations/antd/: AntdProvider.tsx  theme-config.ts
src/integrations/antd/theme/: dark.ts  light.ts
src/integrations/better-auth/: auth-client.ts  auth-middleware.ts  auth.ts
src/pages/: CodeStandardsPage.tsx  GitHubPage.tsx
src/routes/: __root.tsx  index.tsx
src/routes/api/auth/: $.ts
src/routes/dashboard/: index.tsx
src/schemas/: app-state.schemas.ts  code-standard.schemas.ts  database.schemas.ts  github.scheams.ts  index.ts  ollama.schemas.ts  review.scheams.ts  schemas.types.ts  shared.scheams.ts
src/store/: app.store.ts  code-standards.store.ts  github.store.ts  hooks.ts  index.ts  ollama.store.ts  review.store.ts  root.ts  store.ts  types.ts  ui.store.ts  user.store.ts
src/store/slices/: app.slice.ts  code-standards.slice.ts  github.slice.ts  index.ts  ollama.slice.ts  review.slice.ts  ui.slice.ts  user.slice.ts
src/types/: env.d.ts
