[package]
name = "ollama-code-reviewer"
version = "0.1.0"
description = "Ollama-powered code reviewer"
authors = ["QPMatrix-Hasan Diab"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1",features = ["dialog-all", "fs-all", "http-all", "path-all", "shell-open"]  }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2"
